# Techpulse

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  config.py  pyproject.toml  requirements.txt  scheduler.py  schemas.py
backend/agents/: classifier.py  dedup.py  fetcher.py  filter.py  formatter.py  publisher.py  scorer.py  summariser.py  writer.py
backend/api/: deps.py  main.py
backend/api/routes/: checkpoint.py  digests.py  public.py  run.py
backend/db/: store.py  supabase_store.py
backend/graph/: main_graph.py
docs/: ARCHITECTURE.md  supabase-setup.sql
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: ApprovalPanel.tsx  ItemCard.tsx  ScoreBadge.tsx
frontend/src/pages/: Checkpoint.tsx  Dashboard.tsx  Digest.tsx  PublicSite.tsx
infra/: docker-compose.yml
