[project]
name = "techpulse-backend"
version = "0.1.0"
description = "TechPulse FastAPI backend"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
  "apscheduler==3.11.0",
  "fastapi==0.115.6",
  "httpx==0.28.1",
  "pydantic-settings==2.7.1",
  "python-dotenv==1.0.1",
  "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "api", "db", "graph"]
